[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-cli"
version = "0.1.2"
description = "A CLI tool for LeetCode"
authors = [{ name = "Jaehyung" }]
requires-python = ">=3.8"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "requests>=2.28.0",
  "browser-cookie3>=0.19.0",
  "beautifulsoup4>=4.11.0",
  "markdownify>=0.11.6",
  "curl-cffi>=0.7.0",
]

[project.scripts]
lc = "main:app"

[tool.setuptools]
py-modules = ["main", "api", "auth", "config"]
